--- a/email_generator.ipynb
+++ b/email_generator.ipynb
@@ -2,45 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9d6eace1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_groq import ChatGroq"
+    "from langchain_groq import ChatGroq\n",
+    "from langchain_core.prompts import PromptTemplate\n",
+    "from langchain_community.document_loaders import WebBaseLoader\n",
+    "from langchain_core.output_parsers import JsonOutputParser\n",
+    "import pandas as pd\n",
+    "import uuid\n",
+    "import chromadb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "55ca6f7a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "GROQ_API_KEY = %env GROQ_API_KEY\n",
     "llm = ChatGroq(\n",
     "    temperature=0,\n",
-    "    groq_api_key='', \n",
+    "    groq_api_key=GROQ_API_KEY, \n",
     "    model_name=\"llama-3.1-70b-versatile\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "91a34537",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from langchain_community.document_loaders import WebBaseLoader\n",
-    "\n",
     "loader = WebBaseLoader(\"https://www.naukri.com/job-listings-cognizant-hiring-for-net-react-developer-cognizant-technology-solutions-india-ltd-kolkata-6-to-11-years-211124502745?src=jobsearchDesk&sid=17354079545416691&xp=1&px=1\")\n",
     "data = loader.load().pop().page_content\n",
     "print(data)"
@@ -48,13 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "b2819a2a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_core.prompts import PromptTemplate\n",
-    "\n",
     "prompt_extract = PromptTemplate.from_template(\n",
     "        \"\"\"\n",
     "        ### SCRAPED TEXT FROM WEBSITE:\n",
@@ -74,21 +69,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "ed21d502",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'role': 'Software Engineer', 'experience': '2-5 years', 'skills': ['Python', 'Java', 'C++'], 'description': 'Design, develop, and test software applications'}, {'role': 'Data Scientist', 'experience': '5-10 years', 'skills': ['Machine Learning', 'Data Analysis', 'Statistics'], 'description': 'Analyze and interpret complex data to inform business decisions'}, {'role': 'Product Manager', 'experience': '5-10 years', 'skills': ['Product Development', 'Marketing', 'Leadership'], 'description': 'Lead the development and launch of new products'}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from langchain_core.output_parsers import JsonOutputParser\n",
-    "\n",
     "json_parser = JsonOutputParser()\n",
     "json_res = json_parser.parse(res.content)\n",
     "print(json_res)"
@@ -101,10 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.read_csv(\"my_portfolio.csv\")\n",
-    "df"
+    "df = pd.read_csv(\"my_portfolio.csv\")"
    ]
   },
   {
@@ -113,7 +95,64 @@
    "id": "8dc8cfb8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "client = chromadb.PersistentClient('vectorstore')\n",
+    "collection = client.get_or_create_collection(name=\"portfolio\")\n",
+    "\n",
+    "if not collection.count():\n",
+    "    for _, row in df.iterrows():\n",
+    "        collection.add(documents=row[\"Techstack\"],\n",
+    "                       metadatas={\"links\": row[\"Links\"]},\n",
+    "                       ids=[str(uuid.uuid4())])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b826b1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = json_res\n",
+    "jobs[0]['skills']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34980de2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_email = PromptTemplate.from_template(\n",
+    "        \"\"\"\n",
+    "        ### JOB DESCRIPTION:\n",
+    "        {job_description}\n",
+    "        \n",
+    "        ### INSTRUCTION:\n",
+    "        You are Mohan, a business development executive at AtliQ. AtliQ is an AI & Software Consulting company dedicated to facilitating\n",
+    "        the seamless integration of business processes through automated tools. \n",
+    "        Over our experience, we have empowered numerous enterprises with tailored solutions, fostering scalability, \n",
+    "        process optimization, cost reduction, and heightened overall efficiency. \n",
+    "        Your job is to write a cold email to the client regarding the job mentioned above describing the capability of AtliQ \n",
+    "        in fulfilling their needs.\n",
+    "        Also add the most relevant ones from the following links to showcase Atliq's portfolio: {link_list}\n",
+    "        Remember you are Mohan, BDE at AtliQ. \n",
+    "        Do not provide a preamble.\n",
+    "        ### EMAIL (NO PREAMBLE):\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        )\n",
+    "\n",
+    "links = []\n",
+    "chain_email = prompt_email | llm\n",
+    "\n",
+    "for job in jobs:\n",
+    "    links = collection.query(query_texts=job['skills'], n_results=2).get('metadatas', [])\n",
+    "    res = chain_email.invoke({\"job_description\": str(job), \"link_list\": links})\n",
+    "    print(res.content)\n",
+    "    print('--------------------------------------------------------------------------')"
+   ]
   }
  ],
  "metadata": {
